--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html{
   font-family: Helvetica, sans-serif;
   font-size: 22px;
+  color: seashell;
 }
 
 body{
@@ -28,15 +29,21 @@ h5 {
   padding: 10px;
 }
 
+.flex-container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: auto;
+}
 
 /* Header Section */
 
 .header{
   display: flex;
   width: 100%;
-  position: fixed;
+  position: top;
   height: 69px;
-  z-index: 1;
+  z-index: 11;
   background: black;
   border-bottom: 1px solid seashell;
 }
@@ -53,6 +60,110 @@ h5 {
 
 .nav span {
   display: inline-block;
-  justify-content: flex-end;
-  padding: 20px 10px;
+  align-content: around;
+  align-content: space-between; 20px;
+}
+
+.main{
+  padding: 69px;
+  width: 1200px;
+  opacity: 0.9;
+  margin: 0 auto;
+}
+
+/* Mission Section */
+
+#mission{
+  display: flex;
+  height: 700px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
+  padding-top: 70px;
+  margin-bottom: 15px;
+}
+
+#mission .content{
+  width: 100%;
+  margin: auto;
+  background-color: black;
+  align-content: center;
+  text-align: center;
+}
+
+/* Featured Tea Section */
+
+#featured{
+  width: 1000px;
+  height: 700px;
+  margin: auto;
+  padding-top: 70px;
+}
+
+.item{
+  padding: 5px;
+}
+
+.item img{
+  width: 300px;
+  height: 200px;
+  display: block;
+  padding-bottom: 10px;
+
+}
+.item span{
+  display: block;
+  text-align: center;
+  padding: 5px;
+}
+
+
+/* Locations Section */
+
+#locations{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+  height: 500;
+  padding-top: 70px;
+  text-align: center;
+
+}
+
+#locations .flex-container{
+  width: 1100;
+  padding-top: 5px;
+  justify-content: center;
+  margin: auto;
+  height: 100%;
+}
+
+.location{
+  display: flex;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  margin:5px 20px;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 280;
+  background: black;
+  opacity: 1.0;
+}
+
+/* Contact Section */
+
+.contact{
+  height: 200px;
+  text-align: center;
+}
+
+/* Footer */
+
+.copyright img{
+  height: 40px;
+  width: 40px;
+  padding-top: 5px;
+  margin-left: 20px;
+  margin-right: 10px;
+}
+.copyright{
+  text-align: left;
+  padding-left: 10px:
 }
